# Paralela-proj1

./: CMakeLists.txt  README.md  compile.sh
src/: cat.cpp  cat.hpp  main.cpp
